# PoseEstimationForMobile

./: .gitignore  LICENSE  README.md
EPMUSMobile/: .gitignore  build.gradle  settings.gradle
EPMUSMobile/app/: build.gradle  google-services.json
EPMUSMobile/app/src/main/: AndroidManifest.xml
EPMUSMobile/gradle/wrapper/: gradle-wrapper.properties
EPMUSMobile/openCVLibrary420/: build.gradle  local.properties
EPMUSMobile/openCVLibrary420/etc/licenses/: ippiw-support.txt  ippiw-third-party-programs.txt
EPMUSMobile/openCVLibrary420/java/: AndroidManifest.xml
EPMUSMobile/openCVLibrary420/java/javadoc/: allclasses-frame.html  allclasses-noframe.html  help-doc.html  index-all.html  index.html  overview-frame.html  overview-summary.html
EPMUSMobile/openCVLibrary420/native/jni/abi-arm64-v8a/: OpenCVModules-release.cmake  OpenCVModules.cmake
EPMUSMobile/openCVLibrary420/native/jni/abi-armeabi-v7a/: OpenCVConfig.cmake  OpenCVModules-release.cmake
EPMUSMobile/openCVLibrary420/native/jni/abi-x86/: OpenCVConfig.cmake
EPMUSMobile/openCVLibrary420/native/jni/abi-x86_64/: OpenCVConfig-version.cmake  OpenCVConfig.cmake  OpenCVModules.cmake
EPMUSMobile/openCVLibrary440/: build.gradle
EPMUSMobile/openCVLibrary440/java/javadoc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  help-doc.html  index-all.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  serialized-form.html
EPMUSMobile/openCVLibrary440/native/jni/: OpenCV-arm64-v8a.mk  OpenCV-x86_64.mk  OpenCV.mk  OpenCVConfig.cmake
EPMUSMobile/openCVLibrary440/native/jni/abi-arm64-v8a/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
EPMUSMobile/openCVLibrary440/native/jni/abi-armeabi-v7a/: OpenCVConfig-version.cmake  OpenCVModules-release.cmake
EPMUSMobile/openCVLibrary440/native/jni/abi-x86/: OpenCVConfig.cmake  OpenCVModules-release.cmake
EPMUSMobile/openCVLibrary440/native/jni/abi-x86_64/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
android_demo/: .gitignore  build.gradle
android_demo/app/: build.gradle
android_demo/app/release/: output.json
android_demo/app/src/main/: AndroidManifest.xml
android_demo/app/src/main/assets/: model-85.tflite
android_demo/demo_mace/: settings.gradle
android_demo/demo_mace/app/: CMakeLists.txt  build.gradle
android_demo/demo_mace/app/src/main/: AndroidManifest.xml
android_demo/demo_mace/app/src/main/java/com/example/: AutoFitFrameLayout.java  AutoFitTextureView.java  Camera2BasicFragment.java  CameraActivity.java  DrawView.java  PoseEstimation.java  PoseEstimationFloatInception.java
android_demo/demo_mace/app/src/main/res/layout/: activity_camera.xml  fragment_camera2_basic.xml
android_demo/demo_mace/app/src/main/res/layout-land/: fragment_camera2_basic.xml
android_demo/demo_mace/app/src/main/res/values/: base-strings.xml
android_demo/demo_mace/gradle/wrapper/: gradle-wrapper.properties
android_demo/demo_mace/macelibrary/: CMakeLists.txt  build.gradle
android_demo/demo_mace/openCVLibrary341/: build.gradle
android_demo/demo_mace/openCVLibrary341/java/javadoc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  index.html  overview-frame.html  overview-tree.html  (+1 more)
android_demo/demo_tflite/openCVLibrary341/: build.gradle
android_demo/demo_tflite_gpu/: .gitignore  build.gradle  settings.gradle
android_demo/demo_tflite_gpu/app/: build.gradle
android_demo/demo_tflite_gpu/app/libs/: tensorflow-lite.aar
android_demo/demo_tflite_gpu/gradle/wrapper/: gradle-wrapper.properties
android_demo/demo_tflite_gpu/openCVLibrary341/: build.gradle
android_demo/demo_tflite_gpu/openCVLibrary341/java/: .project  AndroidManifest.xml
android_demo/demo_tflite_gpu/openCVLibrary420/: build.gradle
android_demo/gradle/wrapper/: gradle-wrapper.properties
android_demo/openCVLibrary341/java/: AndroidManifest.xml
release/cpm_model/: README.md  model.mlmodel  model.pb
release/cpm_model/ckpt/: model-290000.index
release/hourglass_model/: README.md  frozen_graph.pb  hourglass.mlmodel  hourglass.tflite  model.pb  model.tflite
release/mace_ymls/: cpm.yml  hourglass.yml
training/: requirements.txt
training/docker/: Dockerfile
training/docker/cocoapi/PythonAPI/: pycocoDemo.ipynb
training/experiments/: mv2_cpm.cfg  mv2_hourglass.cfg
training/pefm/: test.py
training/pefm/dataset/: dataset.py  dataset_augment.py  dataset_prepare.py  network_mv2_cpm.py
training/pefm/networks/: common.py  mv2_hrnet.py  network_base.py  network_mv2_hourglass.py  networks.py
training/src/: __init__.py  cpm_body.py  dataset.py  dataset_prepare.py  gen_frozen_pb.py  network_base.py  network_mv2_cpm.py  network_mv2_hourglass.py  networks.py  test.py  train.py
training/tools/: benchmark.py  gen_tflite_coreml.py
(+811 files in other folders)
